Online-Event-Booking/kubernetes/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onlineeventbookingsohaib
  labels:
    purpose: assignment
    env: development
