Online-Event-Booking/kubernetes/booking-service.yaml
# 1. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: onlineeventbookingsohaib
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: 22i1029/oebs-booking-service:latest
          ports:
            - containerPort: 3000

---
# 2. Service
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbookingsohaib
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
