Online-Event-Booking/kubernetes/event-service.yaml
# 1. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: onlineeventbookingsohaib
  labels:
    app: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: 22i1029/oebs-event-service:latest
          ports:
            - containerPort: 8081

---
# 2. Service
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbookingsohaib
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
