Online-Event-Booking/kubernetes/mongodb.yaml
# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: onlineeventbookingsohaib
  labels:
    app: mongo # Labels the Deployment itself
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo # Targets pods with this label
  template:
    metadata:
      labels:
        app: mongo # Labels the Pod (required for Service selector)
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc

---
# 3. Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: onlineeventbookingsohaib
spec:
  selector:
    app: mongo # Routes traffic to Pods with this label
  ports:
    - protocol: TCP
      port: 27017 # Service port
      targetPort: 27017 # Pod port
