Online-Event-Booking/kubernetes/notification-service.yaml
# 1. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: onlineeventbookingsohaib
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 22i1029/oebs-notification-service:latest
          ports:
            - containerPort: 3001

---
# 2. Service
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbookingsohaib
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
