Online-Event-Booking/kubernetes/user-service.yaml
# 1. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: onlineeventbookingsohaib
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 22i1029/oebs-user-service:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

---
# 2. Service
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: onlineeventbookingsohaib
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
